Styling and pseudocoding

--- a/index.html
+++ b/index.html
@@ -28,26 +28,26 @@
         <div class="row">
             <div class="col-lg-12 text-center" id="question1">
                 <h2>Which one of these characters is NOT from The Two Rivers?</h2>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="q1" id="rand" value="rand">
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="rand" value="wrong">
                     <label class="form-check-label" for="exampleRadios1">
                         Rand Al'Thor
                     </label>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="perrin">
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
                         Perrin Aybara
                     </label>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="perrin">
+                <div class="form-check correct">
+                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="correct">
                     <label class="form-check-label" for="exampleRadios2">
                         Elyas Machera
                     </label>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="matrim">
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
                         Matrim Cauthon
                     </label>
