Added more questions

--- a/index.html
+++ b/index.html
@@ -53,6 +53,249 @@
                     </label>
                 </div>
             </div>
+            <div class="col-lg-12 text-center" id="question2">
+                <h2>Who was the main author of The Wheel of Time series?</h2>
+                <div class="form-check correct">
+                    <input class="form-check-input" type="radio" name="q1" id="rand" value="correct">
+                    <label class="form-check-label" for="exampleRadios1">
+                        Robert Jordan
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Brandon Sanderson
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        George R. R. Martin
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Patrick Rothfuss
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-12 text-center" id="question3">
+                <h2>Which Ajah does Moiraine belong to?</h2>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="rand" value="wrong">
+                    <label class="form-check-label" for="exampleRadios1">
+                        Red
+                    </label>
+                </div>
+                <div class="form-check correct">
+                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="correct">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Blue
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Yellow
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Black
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-12 text-center" id="question4">
+                <h2>Who is The Lord of Chaos?</h2>
+                <div class="form-check correct">
+                    <input class="form-check-input" type="radio" name="q1" id="rand" value="correct">
+                    <label class="form-check-label" for="exampleRadios1">
+                        Mazrim Taim
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Rand Al'Thor
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Elyas Machera
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Logain Ablar
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-12 text-center" id="question5">
+                <h2>What are the male Aes Sedai called?</h2>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="rand" value="wrong">
+                    <label class="form-check-label" for="exampleRadios1">
+                        The Chosen
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Mages
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Red Army
+                    </label>
+                </div>
+                <div class="form-check correct">
+                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="correct">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Asha'Man
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-12 text-center" id="question6">
+                <h2>?</h2>
+                <div class="form-check correct">
+                    <input class="form-check-input" type="radio" name="q1" id="rand" value="correct">
+                    <label class="form-check-label" for="exampleRadios1">
+                        Robert Jordan
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Brandon Sanderson
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        George R. R. Martin
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Patrick Rothfuss
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-12 text-center" id="question7">
+                <h2>?</h2>
+                <div class="form-check correct">
+                    <input class="form-check-input" type="radio" name="q1" id="rand" value="correct">
+                    <label class="form-check-label" for="exampleRadios1">
+                        Robert Jordan
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Brandon Sanderson
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        George R. R. Martin
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Patrick Rothfuss
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-12 text-center" id="question8">
+                <h2>?</h2>
+                <div class="form-check correct">
+                    <input class="form-check-input" type="radio" name="q1" id="rand" value="correct">
+                    <label class="form-check-label" for="exampleRadios1">
+                        Robert Jordan
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Brandon Sanderson
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        George R. R. Martin
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Patrick Rothfuss
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-12 text-center" id="question9">
+                <h2>?</h2>
+                <div class="form-check correct">
+                    <input class="form-check-input" type="radio" name="q1" id="rand" value="correct">
+                    <label class="form-check-label" for="exampleRadios1">
+                        Robert Jordan
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Brandon Sanderson
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        George R. R. Martin
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Patrick Rothfuss
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-12 text-center" id="question10">
+                <h2>?</h2>
+                <div class="form-check correct">
+                    <input class="form-check-input" type="radio" name="q1" id="rand" value="correct">
+                    <label class="form-check-label" for="exampleRadios1">
+                        Robert Jordan
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Brandon Sanderson
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        George R. R. Martin
+                    </label>
+                </div>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Patrick Rothfuss
+                    </label>
+                </div>
+            </div>
         </div>
     </div>
     </div>
