All questions added

--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
             <div class="col-lg-12 text-center" id="question1">
                 <h2>Which one of these characters is NOT from The Two Rivers?</h2>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="rand" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios1">
                         Rand Al'Thor
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
                         Perrin Aybara
                     </label>
                 </div>
                 <div class="form-check correct">
-                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="correct">
+                    <input class="form-check-input" type="radio" name="q1" value="correct">
                     <label class="form-check-label" for="exampleRadios2">
                         Elyas Machera
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
                         Matrim Cauthon
                     </label>
@@ -56,25 +56,25 @@
             <div class="col-lg-12 text-center" id="question2">
                 <h2>Who was the main author of The Wheel of Time series?</h2>
                 <div class="form-check correct">
-                    <input class="form-check-input" type="radio" name="q1" id="rand" value="correct">
+                    <input class="form-check-input" type="radio" name="q1" value="correct">
                     <label class="form-check-label" for="exampleRadios1">
                         Robert Jordan
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
                         Brandon Sanderson
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
                         George R. R. Martin
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
                         Patrick Rothfuss
                     </label>
@@ -83,25 +83,25 @@
             <div class="col-lg-12 text-center" id="question3">
                 <h2>Which Ajah does Moiraine belong to?</h2>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="rand" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios1">
                         Red
                     </label>
                 </div>
                 <div class="form-check correct">
-                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="correct">
+                    <input class="form-check-input" type="radio" name="q1" value="correct">
                     <label class="form-check-label" for="exampleRadios2">
                         Blue
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
                         Yellow
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
                         Black
                     </label>
@@ -110,25 +110,25 @@
             <div class="col-lg-12 text-center" id="question4">
                 <h2>Who is The Lord of Chaos?</h2>
                 <div class="form-check correct">
-                    <input class="form-check-input" type="radio" name="q1" id="rand" value="correct">
+                    <input class="form-check-input" type="radio" name="q1" value="correct">
                     <label class="form-check-label" for="exampleRadios1">
                         Mazrim Taim
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
                         Rand Al'Thor
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
                         Elyas Machera
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
                         Logain Ablar
                     </label>
@@ -137,162 +137,162 @@
             <div class="col-lg-12 text-center" id="question5">
                 <h2>What are the male Aes Sedai called?</h2>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="rand" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios1">
                         The Chosen
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
                         Mages
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
                         Red Army
                     </label>
                 </div>
                 <div class="form-check correct">
-                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="correct">
+                    <input class="form-check-input" type="radio" name="q1" value="correct">
                     <label class="form-check-label" for="exampleRadios2">
                         Asha'Man
                     </label>
                 </div>
             </div>
             <div class="col-lg-12 text-center" id="question6">
-                <h2>?</h2>
-                <div class="form-check correct">
-                    <input class="form-check-input" type="radio" name="q1" id="rand" value="correct">
+                <h2>How many books are in the main Wheel of Time series?</h2>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios1">
-                        Robert Jordan
+                        10
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
-                        Brandon Sanderson
+                        12
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
-                        George R. R. Martin
+                        13
                     </label>
                 </div>
-                <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
+                <div class="form-check correct">
+                    <input class="form-check-input" type="radio" name="q1" value="correct">
                     <label class="form-check-label" for="exampleRadios2">
-                        Patrick Rothfuss
+                        14
                     </label>
                 </div>
             </div>
             <div class="col-lg-12 text-center" id="question7">
-                <h2>?</h2>
-                <div class="form-check correct">
-                    <input class="form-check-input" type="radio" name="q1" id="rand" value="correct">
+                <h2>What are the followers of the Dark One called?</h2>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios1">
-                        Robert Jordan
+                        The Chosen
+                    </label>
+                </div>
+                <div class="form-check correct">
+                    <input class="form-check-input" type="radio" name="q1" value="correct">
+                    <label class="form-check-label" for="exampleRadios2">
+                        The Forsaken
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
-                        Brandon Sanderson
+                        Seanchan
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
-                        George R. R. Martin
-                    </label>
-                </div>
-                <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
-                    <label class="form-check-label" for="exampleRadios2">
-                        Patrick Rothfuss
+                        Children of the Light
                     </label>
                 </div>
             </div>
             <div class="col-lg-12 text-center" id="question8">
-                <h2>?</h2>
+                <h2>Which legend united all the lands west of the Spine of the World?</h2>
                 <div class="form-check correct">
-                    <input class="form-check-input" type="radio" name="q1" id="rand" value="correct">
+                    <input class="form-check-input" type="radio" name="q1" value="correct">
                     <label class="form-check-label" for="exampleRadios1">
-                        Robert Jordan
+                        Artur Hawkwing
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
-                        Brandon Sanderson
+                        Lews Therin Telamon
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
-                        George R. R. Martin
+                        Rogosh Eagle-eye
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
-                        Patrick Rothfuss
+                        Birgitte Silverbow
                     </label>
                 </div>
             </div>
             <div class="col-lg-12 text-center" id="question9">
-                <h2>?</h2>
-                <div class="form-check correct">
-                    <input class="form-check-input" type="radio" name="q1" id="rand" value="correct">
+                <h2>Shadar Logoth was once a great city named __________.</h2>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="correct">
                     <label class="form-check-label" for="exampleRadios1">
-                        Robert Jordan
+                        Illian
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
-                        Brandon Sanderson
+                        Tarabon
+                    </label>
+                </div>
+                <div class="form-check correct">
+                    <input class="form-check-input" type="radio" name="q1" value="correct">
+                    <label class="form-check-label" for="exampleRadios2">
+                        Aridhol
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
-                        George R. R. Martin
-                    </label>
-                </div>
-                <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
-                    <label class="form-check-label" for="exampleRadios2">
-                        Patrick Rothfuss
+                        Tear
                     </label>
                 </div>
             </div>
             <div class="col-lg-12 text-center" id="question10">
-                <h2>?</h2>
-                <div class="form-check correct">
-                    <input class="form-check-input" type="radio" name="q1" id="rand" value="correct">
+                <h2>Which one of the following is not one of The Three Oaths?</h2>
+                <div class="form-check wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="correct">
                     <label class="form-check-label" for="exampleRadios1">
-                        Robert Jordan
+                        To speak no word that is not true.
+                    </label>
+                </div>
+                <div class="form-check correct">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
+                    <label class="form-check-label" for="exampleRadios2">
+                        To show no emotion.
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="perrin" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
-                        Brandon Sanderson
+                        To make no weapon which one man may kill another.
                     </label>
                 </div>
                 <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="elyas" value="wrong">
+                    <input class="form-check-input" type="radio" name="q1" value="wrong">
                     <label class="form-check-label" for="exampleRadios2">
-                        George R. R. Martin
-                    </label>
-                </div>
-                <div class="form-check wrong">
-                    <input class="form-check-input" type="radio" name="q1" id="matrim" value="wrong">
-                    <label class="form-check-label" for="exampleRadios2">
-                        Patrick Rothfuss
+                        Never to use the One Power as a weapon except against Darkfriends or Shadowspawn, or in the last extreme defense of her life, the life of her Warder, or another Aes Sedai.
                     </label>
                 </div>
             </div>
