--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="row"></div>
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="text-center text-danger" id="timer">Time Remaining</h2>
+                <h2 class="text-center text-danger" id="timer"></h2>
             </div>
         </div>
         <div class="row">
@@ -36,7 +36,7 @@
                 <p>
                     <h3>Press start to begin.</h3>
                 </p>
-                <button type="button" class="btn btn-dark btn-lg btn-block mb-2">Start</button>
+                <button type="button" class="btn btn-dark btn-lg btn-block mb-2" id="start">Start</button>
             </div>
             <div class="col-lg-12 text-center" id="question1">
                 <h2>Which one of these characters is NOT from The Two Rivers?</h2>
